force-app/main/default/objects/Related_Interaction_Contact__c/Related_Interaction_Contact__c.object-meta.xml
<CustomObject>
    <description>This Object will be used to hold many to many relation between Contact and Interaction.</description>
    <label>Related Interaction Contact</label>
    <nameField>
        <displayFormat>CIN-{0000}</displayFormat>
        <label>Related Interaction Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Interaction Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>