force-app/main/default/objects/Related_Interaction_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>if(NOT(Interaction__r.Account__r.IsPersonAccount),Interaction__r.Account__r.Name,Interaction__r.Contact__r.FirstName+&#39; &#39;+Interaction__r.Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>