force-app/main/default/objects/Related_Interaction_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Interactions</relationshipLabel>
    <relationshipName>Related_Interaction_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>