force-app/main/default/objects/Related_Interaction_Contact__c/fields/Date_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Contact__c</fullName>
    <label>Date of Contact</label>
    <type>Date</type>
</CustomField>