force-app/main/default/objects/Related_Interaction_Contact__c/fields/Direct_Formula__c.field-meta.xml
<CustomField>
    <fullName>Direct_Formula__c</fullName>
    <formula>IF( Contact__c  =  Interaction__r.Contact__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct</label>
    <type>Checkbox</type>
</CustomField>