force-app/main/default/objects/Related_Interaction_Contact__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interaction</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Can not be associated with Interaction linked to Person Account</errorMessage>
        <filterItems>
            <field>Interaction__c.Account__r.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Related Interaction Contacts</relationshipLabel>
    <relationshipName>Related_Interaction_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>